--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
+  "displayName": "deleveryApp",
   "expo": {
+    "scheme": "deleveryapp",
     "name": "deleveryApp",
-    "slug": "deleveryApp",
+    "slug": "deleveryapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,9 +13,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ktleon2.deleveryApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
